basic structure ready for project

--- a/index.css
+++ b/index.css
@@ -1,3 +1,20 @@
-#container {
-    background-color: red;
+.header {
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+    border: 1px solid black;
+}
+
+.nav-items > ul{
+    list-style-type: none;
+    display: flex;
+}
+
+.logo{
+    padding-left: 10px;
+    width: 100px;
+}
+
+.nav-items > ul > li{
+    padding: 10px;
 }
