--- a/index.css
+++ b/index.css
@@ -26,16 +26,60 @@
     justify-content:center;
 }
 
-.card{
+
+.card {
     width: 200px;
-    border-radius: 5px;
-    box-shadow: -1px 4px 20px 14px rgba(0, 0, 0, 0.2);
+    height: 23rem;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    background-color: #fff;
     padding: 10px;
-    margin: 20px;
-    cursor: pointer;
+    margin: 10px;
 }
 
-.card > img{
+.card:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.card-image {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
+    background-repeat: no-repeat;
     border-radius: 10px;
+    display: block;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-title {
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+}
+
+.card-rating-cost-for-two {
+    margin: 4px 0;
+    font-size: 16px;
+    color: #080707;
+    display: flex;
+    justify-content: space-between;
+}
+
+.star-rating {
+    width: 2.8rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-subtitle {
+    margin: 0;
+    margin-top: 10px;
+    font-size: 14px;
+    color: #666;
 }
